Notifications feed and counter in topbar

--- a/src/uLearn.Web/Views/Account/UserMenuPartial.cshtml
+++ b/src/uLearn.Web/Views/Account/UserMenuPartial.cshtml
@@ -2,56 +2,52 @@
 
 @if (Model.IsAuthenticated)
 {
-	using (Html.BeginForm("LogOff", "Login", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
+	using (Html.BeginForm("LogOff", "Login", FormMethod.Post, new { id = "logoutForm", @class = "hidden" }))
 	{
 		@Html.AntiForgeryToken()
-		var profileMenuTitle = Model.User.VisibleName;
-		if (string.IsNullOrEmpty(profileMenuTitle))
-		{
-			profileMenuTitle = "Меню";
-		}
-
-		var hasProfileWarning = string.IsNullOrEmpty(Model.User.Email) || !Model.User.EmailConfirmed;
-
-		<ul class="nav navbar-nav navbar-right">
-			<li class="dropdown">
-				<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-					@if (hasProfileWarning)
-					{
-						<span class="fa fa-exclamation-triangle user-menu__error__icon"></span>
-					}
-					@profileMenuTitle <span class="caret"></span>
-				</a>
-				<ul class="dropdown-menu">
-					<li>
-						<a href="@Url.Action("Manage", "Account")" title="Редактировать профиль">
-							Профиль
-						</a>
-					</li>
-					@if (string.IsNullOrEmpty(Model.User.Email))
-					{
-						<li class="user-menu__error">
-							Не&nbsp;указана <nobr>эл.&nbsp;почта&nbsp;<span class="fa fa-question-circle with-long-tooltip" data-toggle="tooltip" data-placement="bottom" title="Укажите в профиле электронную почту, чтобы получать уведомления и восстановить доступ в случае утери пароля"></span></nobr>
-						</li>
-					}
-					@if (! string.IsNullOrEmpty(Model.User.Email) && ! Model.User.EmailConfirmed)
-					{
-						<li class="user-menu__error">
-							Эл.&nbsp;почта <nobr>не&nbsp;подтверждена&nbsp;<span class="fa fa-question-circle with-long-tooltip" data-toggle="tooltip" data-placement="bottom" title="Подтвердите в профиле электронную почту, чтобы получать уведомления и восстановить доступ в случае утери пароля"></span></nobr>
-						</li>
-					}
-                    <li>@Html.ActionLink("Сертификаты", "Index", "Certificates", new { userId = Model.User.Id }, new { })</li>
-					<li><a href="#" onclick="document.getElementById('logoutForm').submit(); return false;">Выход</a></li>
-				</ul>
-			</li>
-
-		</ul>
 	}
+
+	var profileMenuTitle = Model.User.VisibleName;
+	if (string.IsNullOrEmpty(profileMenuTitle))
+	{
+		profileMenuTitle = "Меню";
+	}
+
+	var hasProfileWarning = string.IsNullOrEmpty(Model.User.Email) || !Model.User.EmailConfirmed;
+		
+	<li class="dropdown">
+		<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+			@if (hasProfileWarning)
+			{
+				<span class="fa fa-exclamation-triangle user-menu__error__icon"></span>
+			}
+			@profileMenuTitle <span class="caret"></span>
+		</a>
+		<ul class="dropdown-menu">
+			<li>
+				<a href="@Url.Action("Manage", "Account")" title="Редактировать профиль">
+					Профиль
+				</a>
+			</li>
+			@if (string.IsNullOrEmpty(Model.User.Email))
+			{
+				<li class="user-menu__error">
+					Не&nbsp;указана <nobr>эл.&nbsp;почта&nbsp;<span class="fa fa-question-circle with-long-tooltip" data-toggle="tooltip" data-placement="bottom" title="Укажите в профиле электронную почту, чтобы получать уведомления и восстановить доступ в случае утери пароля"></span></nobr>
+				</li>
+			}
+			@if (! string.IsNullOrEmpty(Model.User.Email) && ! Model.User.EmailConfirmed)
+			{
+				<li class="user-menu__error">
+					Эл.&nbsp;почта <nobr>не&nbsp;подтверждена&nbsp;<span class="fa fa-question-circle with-long-tooltip" data-toggle="tooltip" data-placement="bottom" title="Подтвердите в профиле электронную почту, чтобы получать уведомления и восстановить доступ в случае утери пароля"></span></nobr>
+				</li>
+			}
+            <li>@Html.ActionLink("Сертификаты", "Index", "Certificates", new { userId = Model.User.Id }, new { })</li>
+			<li><a href="#" onclick="document.getElementById('logoutForm').submit(); return false;">Выход</a></li>
+		</ul>
+	</li>
 }
 else
 {
-	<ul class="nav navbar-nav navbar-right">
-		<li>@Html.ActionLink("Регистрация", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
-		<li>@Html.ActionLink("Вход", "Index", "Login", routeValues: new { returnUrl = Request.RawUrl }, htmlAttributes: new { id = "loginLink" })</li>
-	</ul>
+	<li>@Html.ActionLink("Регистрация", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
+	<li>@Html.ActionLink("Вход", "Index", "Login", routeValues: new { returnUrl = Request.RawUrl }, htmlAttributes: new { id = "loginLink" })</li>
 }
