--- a/src/uLearn.Web/Views/Feed/NotificationsTopbarPartial.cshtml
+++ b/src/uLearn.Web/Views/Feed/NotificationsTopbarPartial.cshtml
@@ -1,10 +1,13 @@
 ﻿@model uLearn.Web.Controllers.NotificationsTopbarPartialModel
 
 <li class="dropdown">
-	<a href="#" class="notifications__icon-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" title="Последние уведомления" data-notifications-url="@Url.Action("NotificationsPartial")" data-count-url="@Url.Action("UnreadCount")">
+	<a href="#" class="notifications__icon-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" title="Последние уведомления"
+		data-notifications-url="@Url.Action("NotificationsPartial")"
+		data-count-url="@Url.Action("UnreadCount", new { lastTimestamp = "LAST_TIMESTAMP"})"
+		data-last-timestamp="@Model.LastViewTimestamp">
 		<span class="notifications__icon fa fa-bell"></span><span class="notifications__counter @(Model.UnreadCount == 0 ? "collapse" : "")">@(Math.Min(99, Model.UnreadCount))</span>
 	</a>
 	<ul class="dropdown-menu notifications__dropdown">
-		@Html.Action("NotificationsPartial")
+		
 	</ul>
 </li>
