--- a/src/uLearn.Web/Views/Shared/_Layout.cshtml
+++ b/src/uLearn.Web/Views/Shared/_Layout.cshtml
@@ -87,7 +87,7 @@
 					}
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
-					@if (User.Identity.IsAuthenticated)
+					@if (User.Identity.IsAuthenticated && User.HasAccess(CourseRole.Instructor))
 					{
 						@Html.Action("NotificationsTopbarPartial", "Feed")
 					}
