User menu and notifications area on mobile layout: only one of them should be visible
Some style changes

--- a/src/uLearn.Web/Content/Site.css
+++ b/src/uLearn.Web/Content/Site.css
@@ -72,6 +72,7 @@ input[type="checkbox"].input-validation-error {
 .navbar-inverse {
 	background-color: #32383F;
 	border-color: #32383F;
+	border-bottom-width: 0;
 }
 
 .navbar-inverse .navbar-brand,
