--- a/src/uLearn.Web/Content/notifications.css
+++ b/src/uLearn.Web/Content/notifications.css
@@ -7,6 +7,11 @@
 	}
 }
 
+.notifications__mobile-nav {
+	margin-bottom: 0;
+	margin-top: 7px;
+}
+
 .notifications__icon {
 	font-size: 18px;
 }
@@ -23,6 +28,7 @@
 	list-style: none;
 	padding: 5px 0;
 	margin-bottom: 0;
+	border-bottom: 1px solid #bbb;
 }
 
 .notifications__dropdown.notifications__mobile-dropdown.collapse:not(.in) {
@@ -82,6 +88,10 @@
 	padding: 7px 15px;
 }
 
+.notifications__info {
+	color: #888;
+}
+	
 .notifications__notification.unread {
 	background-color: #e3ffe3;
 }
