--- a/src/uLearn.Web/Views/Home/Terms.cshtml
+++ b/src/uLearn.Web/Views/Home/Terms.cshtml
@@ -7,6 +7,13 @@
 
 	<p>
 		Материалы корпоративного портала ЗАО "ПФ "СКБ Контур" &mdash; Ulearn доступны по лицензии <a href="https://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>.
-		Использование всех материалов Ulearn будет считаться принятием условий указанной лицензии.
+		Использование любых материалов Ulearn будет считаться принятием условий указанной лицензии.
+	</p>
+	
+	<p>
+		Данные, предоставляемые пользователями (такие как имя, фамилия, электронная почта и ссылка на профиль в социальной сети),
+		фиксируются и обрабатываются ЗАО "ПФ "СКБ Контур": систематизируются, хранятся, уточняются, но не передаются третьим лицам.
+		Согласие на эти операции выдается пользователем на неопределенный срок, не требует периодического подтверждения и может быть отозвано в порядке,
+		предусмотренном действующим законодательством РФ.
 	</p>
 </div>
