--- a/src/uLearn.Web/Views/Login/ExternalLoginConfirmation.cshtml
+++ b/src/uLearn.Web/Views/Login/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,5 @@
-﻿@model ExternalLoginConfirmationViewModel
+﻿@using uLearn.Web.Extensions
+@model ExternalLoginConfirmationViewModel
 @{
 	ViewBag.Title = "Регистрация";
 }
@@ -17,7 +18,7 @@
 							Выберите себе логин и укажите свою почту
 						</span>
 					</p>
-					@Html.ValidationSummary(true)
+					@Html.UlearnValidationSummary(true)
 					<div class="form-group">
 						@Html.TextBoxFor(m => m.UserName, new { @class = "form-control", placeholder = "Логин", autofocus = "autofocus" })
 						@Html.ValidationMessageFor(m => m.UserName)
@@ -25,6 +26,29 @@
 					<div class="form-group">
 						@Html.TextBoxFor(m => m.Email, new { @class = "form-control", placeholder = "Эл. почта" })
 						@Html.ValidationMessageFor(m => m.Email)
+					</div>
+					<p class="strike-line grey">
+						<span>
+							придумайте пароль
+						</span>
+					</p>
+					<div class="form-group">
+						@Html.PasswordFor(m => m.Password, new { @class = "form-control", placeholder = "Пароль" })
+						@Html.ValidationMessageFor(m => m.Password)
+					</div>
+					<div class="form-group">
+						@Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", placeholder = "Ещё раз" })
+						@Html.ValidationMessageFor(m => m.ConfirmPassword)
+					</div>
+					<div class="form-group">
+						<div class="checkbox checkbox-default">
+							@Html.CheckBoxFor(m => m.AgreeWithTerms)
+							@* We can't use Html.LabelFor() here because display name for AgreeWithTerms is HTML, but Html.LabelFor() doesn't support this *@
+							<label for="@Html.NameFor(m => m.AgreeWithTerms)">
+								@Html.Raw(HttpUtility.HtmlDecode(Html.DisplayNameFor(m => m.AgreeWithTerms).ToString()))
+							</label>
+							@Html.ValidationMessageFor(m => m.AgreeWithTerms)
+						</div>
 					</div>
 					<div class="form-group">
 						<input type="submit" class="ph-btn ph-btn-green btn-block" value="Сохранить"/>
