--- a/src/uLearn.Web/Views/Course/LtiQuizSlide.cshtml
+++ b/src/uLearn.Web/Views/Course/LtiQuizSlide.cshtml
@@ -23,8 +23,7 @@
 			   isGuest = false,
 			   manualQuizCheckQueueItem = (ManualQuizChecking) null,
 		   })
-		@Scripts.Render("~/libraries.bundle.js")
-		@Scripts.Render("~/ulearn.bundle.js")
+		@Scripts.Render("~/scripts.bundle.js")
 	}
 
 	@Html.Partial("_YandexMetrika")
