--- a/src/uLearn.Web/Views/Shared/_Layout.cshtml
+++ b/src/uLearn.Web/Views/Shared/_Layout.cshtml
@@ -115,13 +115,12 @@
 	@Html.Action("SuggestMailTransport", "Notifications")
 	@Html.Action("CheckIsEmailConfirmed", "Account")
 	
-	@Scripts.Render("~/libraries.bundle.js")
+	@Scripts.Render("~/scripts.bundle.js")
 	@* Add Sentry (https://sentry.io) script for error logging *@
 	<script src="https://cdn.ravenjs.com/3.16.0/raven.min.js" crossorigin="anonymous"></script>
 	<script>
 		Raven.config('https://992e1a5327ad4e48af004ae709b51aba@sentry.io/181214').install()
 	</script>
-	@Scripts.Render("~/ulearn.bundle.js")
 	@RenderSection("scripts", required: false)
 
 	<script>
