--- a/src/CourseTool/templates/config.xml
+++ b/src/CourseTool/templates/config.xml
@@ -25,7 +25,7 @@
 		<!-- the 'default' profile will be used when patching/converting if not specified -->
 		<Profile name="default">
 			<EdxStudioUrl>https://openedu.urfu.ru:8081</EdxStudioUrl>
-			<UlearnUrl>https://ulearn.azurewebsites.net</UlearnUrl>
+			<UlearnUrl>https://ulearn.me</UlearnUrl>
 		</Profile>
 		<Profile name="dev">
 			<EdxStudioUrl>http://192.168.33.10:18010</EdxStudioUrl>
