Integraion with Kontur.Passport: external login and special filter for required kontur.passport login

--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -1054,6 +1054,9 @@ hr.without-top-margin {
 	font-size: 14px;
 }
 
+#externalLogins #socialLoginList .btn {
+	margin-bottom: 5px;	
+}
 
 /* Strike line */
 .strike-line {
