--- a/src/uLearn.Web/Views/Account/Manage.cshtml
+++ b/src/uLearn.Web/Views/Account/Manage.cshtml
@@ -27,11 +27,7 @@
 			<div class="row">
 				<section id="externalLogins" class="col-sm-10 col-sm-offset-2">
 					@Html.Action("RemoveAccountList")
-					<div class="row">
-						<div class="col-md-6">
-							@Html.Partial("../Login/_ExternalLoginsListPartial", new ExternalLoginsListModel { Action = "LinkLogin", ReturnUrl = ViewBag.ReturnUrl })
-						</div>
-					</div>
+					@Html.Action("ExternalLoginsListPartial", "Login", new ExternalLoginsListModel { Action = "LinkLogin", ReturnUrl = ViewBag.ReturnUrl, Type = ExternalLoginListType.Link })
 				</section>
 			</div>
 		</div>
