--- a/src/uLearn.Web/Views/Account/_RemoveAccountPartial.cshtml
+++ b/src/uLearn.Web/Views/Account/_RemoveAccountPartial.cshtml
@@ -1,4 +1,5 @@
-﻿@model ICollection<Microsoft.AspNet.Identity.UserLoginInfo>
+﻿@using uLearn.Web.Microsoft.Owin.Security.VK
+@model ICollection<Microsoft.AspNet.Identity.UserLoginInfo>
 
 @if (Model.Count > 0)
 {
@@ -8,7 +9,7 @@
 			@foreach (var account in Model)
 			{
 				<tr>
-					<td>@account.LoginProvider <span class="text-muted">id@(account.ProviderKey)</span></td>
+					<td>@account.LoginProvider <span class="text-muted">@(account.LoginProvider == VkAuthenticationConstants.AuthenticationType ? "id" + account.ProviderKey : "")</span></td>
 					<td>
 						@if (ViewBag.ShowRemoveButton)
 						{
@@ -18,7 +19,7 @@
 								<div>
 									@Html.Hidden("loginProvider", account.LoginProvider)
 									@Html.Hidden("providerKey", account.ProviderKey)
-									<input type="submit" class="btn btn-danger btn-sm pull-right" value="Удалить" title="Удалить привязку @account.LoginProvider" />
+									<input type="submit" class="btn btn-danger btn-sm pull-right" value="Отвязать" title="Удалить привязку @account.LoginProvider" />
 								</div>
 							}
 						}
