--- a/src/uLearn.Web/Views/Login/ExternalLoginsListPartial.cshtml
+++ b/src/uLearn.Web/Views/Login/ExternalLoginsListPartial.cshtml
@@ -4,13 +4,13 @@
 
 @{
 	var loginProviders = Context.GetOwinContext().Authentication.GetExternalAuthenticationTypes().Where(
-		x => x.AuthenticationType != "LTI" && (Model.AvailableProviders == null || Model.AvailableProviders.Contains(x.AuthenticationType))
+		x => x.AuthenticationType != "LTI" && (! Model.AvailableProviders.Any() || Model.AvailableProviders.Contains(x.AuthenticationType))
 	).OrderBy(x => x.AuthenticationType).ToList();
 
 	if (Model.Type == ExternalLoginListType.Link)
 	{
-		var loginProvidersDescriptions = loginProviders.Select(p => p.AuthenticationType).ToList();
-		if (! Model.UserLogins.All(l => loginProvidersDescriptions.Contains(l.LoginProvider)))
+		var userLoginProviders = Model.UserLogins.Select(l => l.LoginProvider).ToList();
+		if (!loginProviders.All(l => userLoginProviders.Contains(l.AuthenticationType)))
 		{
 			<h2>Привязать социальную сеть</h2>
 		}
