--- a/src/uLearn.Web/Views/Login/AddKonturProfileLogin.cshtml
+++ b/src/uLearn.Web/Views/Login/AddKonturProfileLogin.cshtml
@@ -2,17 +2,22 @@
 @model string
 
 @{
-	ViewBag.Title = "Привяжите аккаунт Контур.Паспорта";
+	ViewBag.Title = "Войти как контуровец";
 }
 
 <div class="container">
 	<div class="row">
 		<div class="col-md-offset-4 col-md-4">
 			<h2>@ViewBag.Title</h2>
+			
+			<p>
+				Привяжите контуровский аккаунт, и мы сможем выдавать вам бейджи на&nbsp;Стаффе за&nbsp;пройденные курсы.
+			</p>
 
 			<section id="socialLoginForm">
 				@using (Html.BeginForm("LinkLogin", "Login", new { ReturnUrl = Model }))
 				{
+					@Html.AntiForgeryToken()
 					const string authenticationType = KonturPassportConstants.AuthenticationType;
 					<button type="submit" class="ph-btn ph-btn-blue btn-block" id="@authenticationType" name="provider" value="@authenticationType" title="Войдите, используя ваш аккаунт @authenticationType">
 						Привязать @authenticationType
@@ -20,7 +25,9 @@
 				}
 			</section>
 			
-			<a href="@Model">Не сейчас</a>
+			<p>
+				<a href="@Model" title="Привяжите Контур.Паспорт позже">Не сейчас</a>
+			</p>
 		</div>
 	</div>
 </div>
