Change behavior on some errors. Plus logging

--- a/src/uLearn.Web/Views/Login/AddKonturProfileLogin.cshtml
+++ b/src/uLearn.Web/Views/Login/AddKonturProfileLogin.cshtml
@@ -11,7 +11,7 @@
 			<h2>@ViewBag.Title</h2>
 			
 			<p>
-				Привяжите контуровский аккаунт, и мы сможем выдавать вам бейджи на&nbsp;Стаффе за&nbsp;пройденные курсы.
+				Привяжите контуровский аккаунт, и мы сможем выдавать вам награды на&nbsp;Стаффе за&nbsp;пройденные курсы.
 			</p>
 
 			<section id="socialLoginForm">
