--- a/src/uLearn.Web/Views/Login/EnsureKonturProfileLogin.cshtml
+++ b/src/uLearn.Web/Views/Login/EnsureKonturProfileLogin.cshtml
@@ -26,7 +26,7 @@
 			<div>
 				<p>
 					Если у вас уже есть аккаунт на ulearn.me, воспользуйтесь формой <span class="hidden-xs hidden-sm">справа</span><span class="hidden-md hidden-lg">ниже</span>.
-					Сразу после входа мы предложим привязать контуровский аккаунт, чтобы вы могли получать награды в Стаффе.
+					Сразу после входа мы предложим привязать контуровский аккаунт, чтобы вы могли получать награды на&nbsp;Стаффе.
 				</p>
 			</div>
 			
