--- a/src/uLearn.Web/Views/Account/Manage.cshtml
+++ b/src/uLearn.Web/Views/Account/Manage.cshtml
@@ -13,7 +13,7 @@
 
 					@if (!string.IsNullOrEmpty(ViewBag.StatusMessage))
 					{
-						<div class="alert @(ViewBag.IsStatusError ? "alert-error" : "alert-success")">@ViewBag.StatusMessage</div>
+						<div class="alert @(ViewBag.IsStatusError ? "alert-danger" : "alert-success")">@ViewBag.StatusMessage</div>
 					}
 				</div>
 			</div>
